[tool.poetry]
name = "mypulp"
version = "0.0.10"
description = "`mypulp` is a package for mypulp."
authors = ["Mikio Kubo <kubomikio@gmail.com>", "SaitoTsutomu <tsutomu7@hotmail.co.jp>"]
homepage = "https://github.com/SaitoTsutomu/mypulp"
classifiers = [
   "Development Status :: 1 - Planning",
   "License :: OSI Approved :: Python Software Foundation License",
   "Programming Language :: Python",
   "Topic :: Software Development",
]
license = "PSFL"
readme = "README.rst"

[tool.poetry.dependencies]
python = "3.7.*"
pulp = "^2.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.7.9"
black = "^19.10b0"
isort = "^4.3.21"
mypy = "^0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
