[tool.poetry]
authors = ["Mikio Kubo <kubomikio@gmail.com>", "SaitoTsutomu <tsutomu7@hotmail.co.jp>"]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Python Software Foundation License",
  "Programming Language :: Python",
  "Topic :: Software Development",
]
description = "`mypulp` is a package for mypulp."
homepage = "https://github.com/SaitoTsutomu/mypulp"
license = "PSFL"
name = "mypulp"
readme = "README.md"
version = "0.0.11"

[tool.poetry.dependencies]
pulp = "^2.3"
python = "^3.7"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
flake8 = "^3.8.3"
isort = "^5.5.1"
mypy = "^0.782"
pytest = "^5.2"
snapshottest = "^0.5.1"

[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]
