[tool.poetry]
authors = ["Mikio Kubo <kubomikio@gmail.com>", "SaitoTsutomu <tsutomu7@hotmail.co.jp>"]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: Python Software Foundation License",
  "Programming Language :: Python",
  "Topic :: Software Development",
]
description = "`mypulp` is a package for mypulp."
homepage = "https://github.com/SaitoTsutomu/mypulp"
license = "PSFL"
name = "mypulp"
readme = "README.md"
version = "0.0.12"

[tool.poetry.dependencies]
pulp = "^2.8"
python = "^3.11"

[tool.poetry.dev-dependencies]
pytest = "^8.2"
pytest-snapshot = "^0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
